Add user stories to readme

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,13 @@
     padding: 1rem;
 }
 
+
+/* Message Alerts */
+#messages {
+    margin-bottom: -2rem;
+}
+
+
 /* Bootstrap Cards */
 .card-img-top {
     object-fit: cover;
