--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,8 @@
 .hero-container .jumbotron {
     margin-bottom: 0;
     background-color: rgba(255, 255, 255, 0.95);
+    min-width: 50vw;
+    padding: 3rem;
 }
 
 /* Hero images */
