--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -8,7 +8,7 @@
 <div id="home-hero" data-hero-page="logout" class="home-hero container-fluid hero-container">
   <div class="jumbotron">
     <div class="row">
-      <div class="col-md-8 mt-3 offset-md-2">
+      <div class="col-md-8 offset-md-2">
         <h3>{% trans "Sign Out" %}</h3>
       </div>
     </div>
@@ -23,7 +23,9 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <button type="submit">{% trans 'Sign Out' %}</button>
+          <div class="mt-4">
+            <button class="btn btn-primary content-width mx-auto" type="submit">{% trans 'Sign Out' %}</button>
+          </div>
         </form>
       </div>
     </div>
