--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,7 +8,7 @@
 <div id="home-hero" data-hero-page="login" class="home-hero container-fluid hero-container">
   <div class="jumbotron">
     <div class="row">
-      <div class="col-md-8 mt-3 offset-md-2">
+      <div class="col-md-8 offset-md-2">
         <h3>{% trans "Sign Up" %}</h3>
 
         <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign
@@ -25,7 +25,9 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+          <div class="mt-4">
+            <button class="btn btn-primary content-width mx-auto" type="submit">{% trans "Sign Up" %}</button>
+          </div>
         </form>
       </div>
     </div>
