--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -19,13 +19,30 @@
     </div>
 
     <div class="row">
-      <div class="col-md-8 mt-3 offset-md-2">
+      <div class="col-md-8 offset-md-2">
         <form class="login" method="POST" action="{% url 'account_login' %}">
           {% csrf_token %}
-          {{ form.as_p }}
-          {% if redirect_field_value %}
-          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-          {% endif %}
+          <div id="div_id_login" class="control-group mt-3">
+            <div class="controls">
+              <input type="text" name="login" placeholder="Username*" autocomplete="username" maxlength="150" class="textinput textInput" required id="id_login">
+            </div>
+          </div>
+
+          <div id="div_id_password" class="control-group mt-3">
+            <div class="controls">
+              <input type="password" name="password" placeholder="Password*" autocomplete="current-password" class="textinput textInput" required id="id_password">
+            </div>
+          </div>
+
+          <div id="div_id_remember" class="control-group mt-3">
+            <div class="controls">
+              <label for="id_remember" class="checkbox ">
+                <input type="checkbox" name="remember" class="checkboxinput" id="id_remember">
+                    Remember Me
+              </label>
+            </div>
+          </div>
+
           <div class="mt-4">
             <button class="primaryAction btn btn-primary content-width mx-auto" type="submit">{% trans "Sign In" %}</button>
           </div>
