--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -16,15 +16,33 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-8 mt-3 offset-md-2">
-
-
+      <div class="col-md-8 offset-md-2">
         <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
           {% csrf_token %}
-          {{ form.as_p }}
-          {% if redirect_field_value %}
-          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-          {% endif %}
+          <div id="div_id_username" class="control-group mt-3">
+            <div class="controls">
+              <input type="text" name="username" placeholder="Username*" autocomplete="username" minlength="1" maxlength="150" class="textinput textInput" required id="id_username">
+            </div>
+          </div>
+
+          <div id="div_id_email" class="control-group mt-3">
+            <div class="controls">
+              <input type="email" name="email" placeholder="E-mail address" autocomplete="email" class="textinput textInput" id="id_email">
+            </div>
+          </div>
+          
+          <div id="div_id_password1" class="control-group mt-3">
+            <div class="controls">
+              <input type="password" name="password1" placeholder="Password*" autocomplete="new-password" class="textinput textInput" required id="id_password1">
+            </div>
+          </div>
+          
+          <div id="div_id_password2" class="control-group mt-3">
+            <div class="controls">
+              <input type="password" name="password2" placeholder="Password (again)*" autocomplete="new-password" class="textinput textInput" required id="id_password2">
+            </div>
+          </div>
+          
           <div class="mt-4">
             <button class="btn btn-primary content-width mx-auto" type="submit">{% trans "Sign Up" %}</button>
           </div>
