--- a/templates/edit_country.html
+++ b/templates/edit_country.html
@@ -1,35 +1,27 @@
 {% extends "base.html" %} 
 {% block content %}
 
-<div class="container">
-  <!-- Message alerts for authentication, articles awaiting approval and errors -->
-  <div class="row">
-    <div class="col-6 offset-3 pt-3">
-      {% for message in messages %}
-      <div role="alert" id="msg" class="alert alert-dismissible fade show {{ message.tags }}">
-        {{ message | safe }}
-        <button class="btn-close" type="button" data-bs-dismiss="alert"></button>
+<!-- Hero image container -->
+<div id="home-hero" data-hero-page="login" class="home-hero container-fluid hero-container">
+  <div class="jumbotron">
+      <!-- Title -->
+      <div class="row">
+          <div class="col-12 col-md-8 offset-md-2">
+              <h3>Edit Country Name</h3>
+          </div>
       </div>
-      {% endfor %}
-    </div>
-  </div>
-  <!-- Title -->
-  <div class="row pt-3">
-    <h1 class="center-text">Edit Country</h1>
-  </div>
-  <!-- Category details to edit -->
-  <div class="row mx-auto">
-    <div class="col-md-4 offset-md-4 col-12">
-      <form action="{{ blog.views.edit_country }}" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <!-- Category name -->
-        <div class="row">Country Name:</div>
-        <div class="row">{{ form.country_name }}</div>
-        <div class="row pt-3">
-          <button class="btn btn-primary content-width mx-auto" type="submit">Update Country</button>
-        </div>
-      </form>
-    </div>
+      <!-- Category details to update -->
+      <div class="row">
+          <div class="col-12 col-md-8 offset-md-2 mt-3">
+              <form action="{{ blog.views.edit_country }}" method="POST" enctype="multipart/form-data">
+                  {% csrf_token %}
+                  {{ form.country_name }}
+                  <div class="mt-4">
+                      <button class="btn btn-primary content-width mx-auto" type="submit">Update Country</button>
+                  </div>
+              </form>
+          </div>
+      </div>
   </div>
 </div>
 
