Updated styling on Add Article page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 /* Hero container */
 .hero-container {
-    height: 100vh;
+    min-height: 100vh;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
