--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -95,19 +95,22 @@
             <div class="row">
                 <div class="col-12">
                     {% if commented %}
-                    <div role="alert">
-                        Your comment is awaiting approval
+                    <div class="mt-3 mb-3" role="alert">
+                        Your comment is awaiting approval.
                     </div>
                     {% else %}
-                    
-                    {% if user.is_authenticated %}
-                    <h3>Have your say...</h3>
-                    <form method="post">
-                        {{ comment_form | crispy }}
-                        {% csrf_token %}
-                        <button type="submit">Post Comment</button>
-                    </form>
-                    {% endif %}
+                        {% if user.is_authenticated %}
+                        <h3>Have your say...</h3>
+                        <form method="post">
+                            <div id="div_id_body" class="control-group mt-3">
+                                <div class="controls">
+                                    <textarea name="body" cols="40" rows="3" class="textarea" required id="id_body" placeholder="Write your comment here"></textarea>
+                                </div>
+                            </div>
+                            {% csrf_token %}
+                            <button class="btn btn-primary content-width mx-auto" type="submit">Post Comment</button>
+                        </form>
+                        {% endif %}
                     {% endif %}
                 </div>
             </div>
