Fixed HTML validation errors

--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -22,7 +22,7 @@
                     <div class="row mt-3 mb-1">Attraction:</div>
                     <div class="row">
                         <input name="attraction" maxlength="150" required="" id="id_attraction"
-                            class="article-attraction" type="text"></input>
+                            class="article-attraction" type="text">
                     </div>
                     <!-- Article Summary -->
                     <div class="row mt-3 mb-1">Summary:</div>
