--- a/templates/add_country.html
+++ b/templates/add_country.html
@@ -17,7 +17,7 @@
                     {% csrf_token %}
                     <div id="div_country_name" class="control-group mt-3">
                         <div class="controls">
-                          <input type="text" name="country_name" placeholder="Country Name*" autocomplete="country_name" maxlength="150" class="textinput textInput" required id="country_name">
+                          <input type="text" name="country_name" placeholder="Country Name*" maxlength="150" class="textinput textInput" required id="country_name">
                         </div>
                     </div>
 
