--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -26,7 +26,7 @@
                     <div class="text-muted fst-italic mb-2 text-center">Posted on {{ article.created_date|date:"j F, Y, g:i a" }} by {{ article.author }}</div>
                     <hr>
                 </header>
-                <div class="mb-3">
+                <div class="text-justify mb-3">
                     <!-- Article body -->
                     <p>{{ article.content | safe }}</p>
                 </div>
@@ -89,13 +89,13 @@
                         <button class="btn btn-primary content-width mx-auto my-3" type="submit">Post Comment</button>
                     </form>
                     {% endif %}
-                    <hr>
                 </div>
             </div>
+            <hr>
             <!-- Display approved comments -->
             {% if comments %}
-            <h3>What others have to say</h3>
-            <div class="row my-2">
+            <h3>The discussion so far...</h3>
+            <div class="row my-4">
                 <div class="col-12">
                     {% for comment in comments %}
                     <h4>{{ comment.user_name }}</h4>
